--- a/styles/main.css
+++ b/styles/main.css
@@ -668,6 +668,8 @@ body .to-top:hover {
   text-align: center;
   position: relative;
   border-radius: 5px;
+  -webkit-animation: wiggle 1s ease infinite;
+          animation: wiggle 1s ease infinite;
 }
 
 #education .schools .card .card-img {
@@ -725,6 +727,8 @@ body .to-top:hover {
 #education .schools .middle-school:hover {
   -webkit-filter: brightness(100%) blur(0px);
           filter: brightness(100%) blur(0px);
+  -webkit-animation: none;
+          animation: none;
   -webkit-transform: translate(0, -10px);
           transform: translate(0, -10px);
 }
@@ -739,6 +743,8 @@ body .to-top:hover {
 #education .schools .high-school:hover {
   -webkit-filter: brightness(100%) blur(0px);
           filter: brightness(100%) blur(0px);
+  -webkit-animation: none;
+          animation: none;
   -webkit-transform: translate(0, -10px);
           transform: translate(0, -10px);
 }
@@ -753,8 +759,155 @@ body .to-top:hover {
 #education .schools .university:hover {
   -webkit-filter: brightness(100%) blur(0px);
           filter: brightness(100%) blur(0px);
+  -webkit-animation: none;
+          animation: none;
   -webkit-transform: translate(0, -10px);
           transform: translate(0, -10px);
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotateZ(-2deg);
+            transform: rotateZ(-2deg);
+  }
+  50% {
+    -webkit-transform: rotateZ(2deg);
+            transform: rotateZ(2deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(-2deg);
+            transform: rotateZ(-2deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    -webkit-transform: rotateZ(-2deg);
+            transform: rotateZ(-2deg);
+  }
+  50% {
+    -webkit-transform: rotateZ(2deg);
+            transform: rotateZ(2deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(-2deg);
+            transform: rotateZ(-2deg);
+  }
+}
+
+#project {
+  height: 80vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(199, 217, 223, 0.719)), to(rgba(0, 75, 50, 0.884)));
+  background: linear-gradient(rgba(199, 217, 223, 0.719), rgba(0, 75, 50, 0.884));
+}
+
+#project .project-cards {
+  height: 80%;
+  display: -ms-grid;
+  display: grid;
+  padding: 1rem;
+  margin-top: 3rem;
+  -ms-grid-columns: 33% 33% 33%;
+      grid-template-columns: 33% 33% 33%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 0.5rem;
+}
+
+#project .project-cards .project-card {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.747);
+  color: rgba(255, 255, 255, 0.808);
+  position: relative;
+  border-radius: 1rem;
+  border-bottom: 0.3rem solid white;
+}
+
+#project .project-cards .project-card .shutter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(1, 50, 82, 0.952);
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  border-radius: 1rem;
+  text-align: center;
+}
+
+#project .project-cards .project-card .project-title {
+  margin: 3rem 0rem;
+  font-size: 2rem;
+}
+
+#project .project-cards .project-card .project-description {
+  padding: 1rem;
+  margin: 1rem;
+  margin-bottom: 3rem;
+  text-align: left;
+  border: 1px solid white;
+  font-size: 1.3rem;
+}
+
+#project .project-cards .project-card .project-description a {
+  text-decoration: none;
+  color: #00a2ff;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+#project .project-cards .project-card .project-description a:hover {
+  font-size: 1.4rem;
+  color: #0eac6f;
+}
+
+#project .project-cards .project-card .project-langs {
+  border: 1px solid white;
+  text-align: left;
+  margin: 1rem;
+  background-color: white;
+  color: black;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+}
+
+#project .project-cards #project1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1/1/2/2;
+}
+
+#project .project-cards #project2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1/2/2/3;
+}
+
+#project .project-cards #project3 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-area: 1/3/2/4;
+}
+
+#project .project-cards #project1:hover #shutter1 {
+  height: 0;
+}
+
+#project .project-cards #project2:hover #shutter2 {
+  height: 0;
+}
+
+#project .project-cards #project3:hover #shutter3 {
+  height: 0;
 }
 
 #contact {
@@ -791,7 +944,7 @@ body .to-top:hover {
 
 #contact form div #email {
   margin: 1rem;
-  margin-left: 1.2rem;
+  margin-left: 3.5rem;
   color: white;
   background-color: rgba(8, 8, 8, 0.774);
   padding: 0.2rem 0.8rem;
