--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -3,7 +3,8 @@
 #about{
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.863),rgba(0, 44, 42, 0.836),rgb(0, 12, 51));
     position: relative;
-    height: 180vh;
+    height: 150vh;
+
 
     .photo-container-1{
             position: absolute;
@@ -66,6 +67,10 @@
         a:hover{
             color: rgb(34, 108, 204);
         }
+        @include respond(phone){
+            top: 20%;
+            padding: 1.5rem;
+        }
     }
 
     .coding-skills{
@@ -81,6 +86,14 @@
         transform: translate(-50%, -20%);
         grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: 15% 85%;
+
+        
+        @include respond(phone){
+            top: 40%;
+            height: 80vh;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 10% 30% 60%;
+        }
         
         h2{
             color: rgb(245, 245, 245);
@@ -88,6 +101,10 @@
             padding-top: 1rem;
             text-align: center;
             grid-area: 1/1/2/5;
+            @include respond(phone){
+                grid-row: 1/2;
+                grid-column: 1/3;
+            }
         }
         h3{
             padding: 0.4rem;
@@ -105,6 +122,12 @@
             padding-left: 1rem;
             grid-area: 2/1/3/2;
             border-right: 1px solid rgba(255, 255, 255, 0.308);
+            
+            @include respond(phone){
+                grid-row: 2/3;
+                grid-column: 1/2;
+            }
+            
             .language{
                 text-shadow: 0 0 5px rgb(255, 255, 255);
                 margin: 0.5rem;
@@ -120,6 +143,13 @@
             margin: 0.5rem;
             margin-top: 0.75rem;
             border-right: 1px solid rgba(255, 255, 255, 0.308);
+           
+            
+            @include respond(phone){
+                grid-row: 3/4;
+                grid-column: 1/2;
+            }
+           
             .database{
                 text-shadow: 0 0 5px white;
                 margin: 0.5rem;
@@ -143,6 +173,13 @@
             margin: 0.5rem;
             margin-top: 0.75rem;
             border-right: 1px solid rgba(255, 255, 255, 0.308);
+            
+            
+            @include respond(phone){
+                grid-row: 3/4;
+                grid-column: 2/3;
+            }
+            
             .editor{
                 text-shadow: 0 0 5px white;
                 margin: 0.5rem;
@@ -157,6 +194,14 @@
             padding-left: 1rem;
             margin: 0.5rem;
             margin-top: 0.75rem;
+            
+            
+            @include respond(phone){
+                grid-row: 2/3;
+                grid-column: 2/3;
+                border-right: 1px solid rgba(255, 255, 255, 0.308);
+            }
+            
             .terminal{
                 text-shadow: 0 0 5px white;
                 margin: 0.5rem;
@@ -181,5 +226,9 @@
         border-radius: 1rem;
         width: 70%;
         padding: 2rem;
+
+        @include respond(phone){
+            
+        }
     }
 }
