--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -1,7 +1,10 @@
 @import "./variables";
 
 #project{
-    height: 80vh;
+    //height: 80vh;
+    @include respond(phone){
+        
+    }
     background:  linear-gradient(rgba(199, 217, 223, 0.719), rgba(0, 75, 50, 0.884));
     .project-cards{
         height: 80%;
@@ -10,8 +13,13 @@
         margin-top: 3rem;
         grid-template-columns: 33% 33% 33%;
         grid-template-rows: 100%;
-        grid-column-gap: 1rem;
-        grid-row-gap: 1rem;
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.5rem;
+
+        @include respond(phone){
+            grid-template-columns: 10% 80% 10%;
+            grid-template-rows: 40vh 40vh 40vh;
+        }
 
         .project-card{
             text-align: center;
@@ -43,7 +51,7 @@
                 margin-bottom: 3rem;
                 text-align: left;
                 border: 1px solid white;
-                font-size: 1.3rem;
+                font-size: 1.2rem;
                 a{
                     text-decoration: none;
                     color: rgb(0, 162, 255);
@@ -52,6 +60,9 @@
                 a:hover{
                     font-size: 1.4rem;
                     color: rgb(14, 172, 111);
+                }
+                @include respond(mobile){
+                    font-size: 1.4rem;
                 }
             }
             .project-langs{
@@ -68,12 +79,24 @@
 
         #project1{
             grid-area: 1/1/2/2;
+            @include respond(phone){
+                grid-row: 1/2;
+                grid-column: 2/3;
+            }
         }
         #project2{
             grid-area: 1/2/2/3;
+            @include respond(phone){
+                grid-row: 2/3;
+                grid-column: 2/3;
+            }
         }
         #project3{
             grid-area: 1/3/2/4;
+            @include respond(phone){
+                grid-row: 3/4;
+                grid-column: 2/3;
+            }
         }
         #project1:hover #shutter1{
             height: 0;
