--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,15 @@
+/*
+@mixin respond($device){
+    
+        @if $device == phone{
+            @media (max-width: 600px){ @content };
+        }
+
+        @mixin respond(phone){
+            font-size: 50%;
+        }
+}
+*/
 * {
   padding: 0;
   margin: 0;
@@ -10,6 +22,18 @@ html {
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 550px) {
+  html {
+    font-size: 48%;
+  }
 }
 
 body .to-top {
@@ -409,7 +433,7 @@ body .to-top:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.863)), color-stop(rgba(0, 44, 42, 0.836)), to(#000c33));
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.863), rgba(0, 44, 42, 0.836), #000c33);
   position: relative;
-  height: 180vh;
+  height: 150vh;
 }
 
 #about .photo-container-1 {
@@ -488,6 +512,13 @@ body .to-top:hover {
   color: #226ccc;
 }
 
+@media (max-width: 600px) {
+  #about .about-text {
+    top: 20%;
+    padding: 1.5rem;
+  }
+}
+
 #about .coding-skills {
   position: absolute;
   display: -ms-grid;
@@ -511,6 +542,17 @@ body .to-top:hover {
       grid-template-rows: 15% 85%;
 }
 
+@media (max-width: 600px) {
+  #about .coding-skills {
+    top: 40%;
+    height: 80vh;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    -ms-grid-rows: 10% 30% 60%;
+        grid-template-rows: 10% 30% 60%;
+  }
+}
+
 #about .coding-skills h2 {
   color: whitesmoke;
   font-size: 3rem;
@@ -521,6 +563,17 @@ body .to-top:hover {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-area: 1/1/2/5;
+}
+
+@media (max-width: 600px) {
+  #about .coding-skills h2 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+  }
 }
 
 #about .coding-skills h3 {
@@ -546,6 +599,17 @@ body .to-top:hover {
   border-right: 1px solid rgba(255, 255, 255, 0.308);
 }
 
+@media (max-width: 600px) {
+  #about .coding-skills .languages {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+}
+
 #about .coding-skills .languages .language {
   text-shadow: 0 0 5px white;
   margin: 0.5rem;
@@ -565,6 +629,17 @@ body .to-top:hover {
   margin: 0.5rem;
   margin-top: 0.75rem;
   border-right: 1px solid rgba(255, 255, 255, 0.308);
+}
+
+@media (max-width: 600px) {
+  #about .coding-skills .additionals {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
 }
 
 #about .coding-skills .additionals .database {
@@ -597,6 +672,17 @@ body .to-top:hover {
   border-right: 1px solid rgba(255, 255, 255, 0.308);
 }
 
+@media (max-width: 600px) {
+  #about .coding-skills .text-editors {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+}
+
 #about .coding-skills .text-editors .editor {
   text-shadow: 0 0 5px white;
   margin: 0.5rem;
@@ -615,6 +701,18 @@ body .to-top:hover {
   padding-left: 1rem;
   margin: 0.5rem;
   margin-top: 0.75rem;
+}
+
+@media (max-width: 600px) {
+  #about .coding-skills .terminals {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    border-right: 1px solid rgba(255, 255, 255, 0.308);
+  }
 }
 
 #about .coding-skills .terminals .terminal {
@@ -656,13 +754,24 @@ body .to-top:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  height: 90%;
+}
+
+@media (max-width: 600px) {
+  #education .schools {
+    width: 90%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 #education .schools .card {
   background: rgba(36, 35, 35, 0.856);
   border: 1px solid white;
   width: 30vw;
-  height: 30vw;
+  height: 96%;
   padding: 1rem;
   margin: 1.3rem;
   text-align: center;
@@ -670,6 +779,22 @@ body .to-top:hover {
   border-radius: 5px;
   -webkit-animation: wiggle 1s ease infinite;
           animation: wiggle 1s ease infinite;
+}
+
+@media (max-width: 600px) {
+  #education .schools .card {
+    height: 35vh;
+    width: 80%;
+    left: 80px;
+  }
+}
+
+@media (max-width: 550px) {
+  #education .schools .card {
+    height: 40vh;
+    width: 70%;
+    left: 70px;
+  }
 }
 
 #education .schools .card .card-img {
@@ -688,12 +813,18 @@ body .to-top:hover {
 #education .schools .card .description {
   color: #0e0e0e;
   text-align: justify;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 0.3rem;
   margin: 0.2rem;
   padding-bottom: 2rem;
   border: 1px solid white;
   background-color: rgba(245, 245, 245, 0.301);
+}
+
+@media (max-width: 600px) {
+  #education .schools .card .description {
+    font-size: 1.5rem;
+  }
 }
 
 #education .schools .card .visit-link {
@@ -796,7 +927,6 @@ body .to-top:hover {
 }
 
 #project {
-  height: 80vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(199, 217, 223, 0.719)), to(rgba(0, 75, 50, 0.884)));
   background: linear-gradient(rgba(199, 217, 223, 0.719), rgba(0, 75, 50, 0.884));
 }
@@ -813,6 +943,15 @@ body .to-top:hover {
       grid-template-rows: 100%;
   grid-column-gap: 0.5rem;
   grid-row-gap: 0.5rem;
+}
+
+@media (max-width: 600px) {
+  #project .project-cards {
+    -ms-grid-columns: 10% 80% 10%;
+        grid-template-columns: 10% 80% 10%;
+    -ms-grid-rows: 40vh 40vh 40vh;
+        grid-template-rows: 40vh 40vh 40vh;
+  }
 }
 
 #project .project-cards .project-card {
@@ -848,7 +987,7 @@ body .to-top:hover {
   margin-bottom: 3rem;
   text-align: left;
   border: 1px solid white;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 #project .project-cards .project-card .project-description a {
@@ -861,6 +1000,12 @@ body .to-top:hover {
 #project .project-cards .project-card .project-description a:hover {
   font-size: 1.4rem;
   color: #0eac6f;
+}
+
+@media (max-width: 550px) {
+  #project .project-cards .project-card .project-description {
+    font-size: 1.4rem;
+  }
 }
 
 #project .project-cards .project-card .project-langs {
@@ -882,6 +1027,17 @@ body .to-top:hover {
   grid-area: 1/1/2/2;
 }
 
+@media (max-width: 600px) {
+  #project .project-cards #project1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+}
+
 #project .project-cards #project2 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
@@ -890,12 +1046,34 @@ body .to-top:hover {
   grid-area: 1/2/2/3;
 }
 
+@media (max-width: 600px) {
+  #project .project-cards #project2 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+}
+
 #project .project-cards #project3 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-area: 1/3/2/4;
+}
+
+@media (max-width: 600px) {
+  #project .project-cards #project3 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
 }
 
 #project .project-cards #project1:hover #shutter1 {
