Improved media queries
Design modified for mobiles and landscape modes

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -4,7 +4,9 @@
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.863),rgba(0, 44, 42, 0.836),rgb(0, 12, 51));
     position: relative;
     height: 150vh;
-
+    @include respond(iphone-land){
+        height: 300vh;
+    }
 
     .photo-container-1{
             position: absolute;
@@ -70,6 +72,10 @@
         @include respond(phone){
             top: 20%;
             padding: 1.5rem;
+        }
+        @include respond(iphone){
+            width: 70%;
+            padding: 2rem;
         }
     }
 
@@ -227,8 +233,8 @@
         width: 70%;
         padding: 2rem;
 
-        @include respond(phone){
-            
+        @include respond(iphone){
+            width: 90%;
         }
     }
 }
