--- a/styles/_mediaquery.scss
+++ b/styles/_mediaquery.scss
@@ -12,10 +12,22 @@
 */
 
 @mixin respond($device){
+    @if $device == iphone-land{
+        @media (max-width: 738px) and (max-height:420px){  @content    };
+    }
     @if $device == phone{
         @media (max-width: 600px){  @content   };
     }
     @if $device == mobile{
         @media (max-width: 550px){  @content    };
+    }
+    @if $device == iphone{
+        @media (max-width: 420px){  @content    };
+    }
+    @if $device == small-i{
+        @media (max-width: 380px){  @content    };
+    }
+    @if $device == very-small-i{
+        @media (max-width: 325px){  @content    };
     }
 }
