--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -20,6 +20,14 @@
             grid-template-columns: 10% 80% 10%;
             grid-template-rows: 40vh 40vh 40vh;
         }
+        @include respond(iphone){
+            grid-template-columns: 5% 90% 5%;
+            grid-template-rows: 50vh 50vh 50vh;
+        }
+        @include respond(iphone-land){
+            grid-template-columns: 5% 90% 5%;
+            grid-template-rows: 100vh 100vh 100vh;
+        }
 
         .project-card{
             text-align: center;
@@ -64,6 +72,9 @@
                 @include respond(mobile){
                     font-size: 1.4rem;
                 }
+                @include respond(iphone-land){
+                    font-size: 1.45rem;
+                }
             }
             .project-langs{
                 border: 1px solid white;
@@ -83,6 +94,10 @@
                 grid-row: 1/2;
                 grid-column: 2/3;
             }
+            @include respond(iphone-land){
+                grid-row: 1/2;
+                grid-column: 2/3;
+            }
         }
         #project2{
             grid-area: 1/2/2/3;
@@ -90,10 +105,18 @@
                 grid-row: 2/3;
                 grid-column: 2/3;
             }
+            @include respond(iphone-land){
+                grid-row: 2/2;
+                grid-column: 2/3;
+            }
         }
         #project3{
             grid-area: 1/3/2/4;
             @include respond(phone){
+                grid-row: 3/4;
+                grid-column: 2/3;
+            }
+            @include respond(iphone-land){
                 grid-row: 3/4;
                 grid-column: 2/3;
             }
