--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,9 @@ body .to-top:hover {
 
 .navigation .nav-items .nav-item:hover {
   color: white;
-  text-shadow: 0 0 3px green, 0 0 10px green,  0 0 20px green;
+  text-shadow: 0 0 3px green,
+ 0 0 10px green, 
+ 0 0 20px green;
   -webkit-animation: hovered 1s ease forwards;
           animation: hovered 1s ease forwards;
 }
@@ -583,8 +585,8 @@ body .to-top:hover {
           transform: translate(-50%, -20%);
   -ms-grid-columns: 25% 25% 25% 25%;
       grid-template-columns: 25% 25% 25% 25%;
-  -ms-grid-rows: 15% 85%;
-      grid-template-rows: 15% 85%;
+  -ms-grid-rows: 10% 90%;
+      grid-template-rows: 10% 90%;
 }
 
 @media (max-width: 600px) {
