--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -3,7 +3,7 @@
 #about{
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.863),rgba(0, 44, 42, 0.836),rgb(0, 12, 51));
     position: relative;
-    height: 150vh;
+    height: 200vh;
     @include respond(iphone-land){
         height: 300vh;
     }
@@ -48,6 +48,9 @@
         text-shadow: 0 0 5px  rgb(0, 183, 255),
                      0 0 10px rgb(0, 183, 255);
 
+        @include respond(iphone){
+            top: 5%;
+        }
     }
     .about-text{
         position: absolute;
@@ -74,6 +77,7 @@
             padding: 1.5rem;
         }
         @include respond(iphone){
+            top: 12%;
             width: 70%;
             padding: 2rem;
         }
@@ -87,18 +91,24 @@
         color: rgb(110, 240, 207);
         box-shadow: 1rem 1rem 2.5rem rgb(153, 182, 185);
         width: 80%;
-        height: 40%;
+        height: 45%;
         @include centralise;
-        transform: translate(-50%, -20%);
+        transform: translate(-50%, -30%);
         grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: 10% 90%;
 
         
         @include respond(phone){
-            top: 40%;
-            height: 80vh;
+            top: 45%;
+            height: 120vh;
             grid-template-columns: 50% 50%;
             grid-template-rows: 10% 30% 60%;
+        }
+        @include respond(iphone){
+            top: 40%;
+            height: 140vh;
+            grid-template-columns: 100%;
+            grid-template-rows: 5% 20% 35% 25% 15%;
         }
         
         h2{
@@ -110,6 +120,10 @@
             @include respond(phone){
                 grid-row: 1/2;
                 grid-column: 1/3;
+            }
+            @include respond(iphone){
+                grid-row: 1/2;
+                grid-column: 1/2;
             }
         }
         h3{
@@ -133,6 +147,11 @@
                 grid-row: 2/3;
                 grid-column: 1/2;
             }
+            @include respond(iphone){
+                width: 60%;
+                grid-row: 2/3;
+                grid-column: 1/2;
+            }
             
             .language{
                 text-shadow: 0 0 5px rgb(255, 255, 255);
@@ -141,6 +160,7 @@
                 border-bottom: 1px solid rgb(201, 201, 201);
                 list-style-type: none;
                 font-size: 1.5rem;
+                
             }
         }
         .additionals{
@@ -155,7 +175,11 @@
                 grid-row: 3/4;
                 grid-column: 1/2;
             }
-           
+            @include respond(iphone){
+                width: 60%;
+                grid-row: 3/4;
+                grid-column: 1/2;
+            }
             .database{
                 text-shadow: 0 0 5px white;
                 margin: 0.5rem;
@@ -185,6 +209,11 @@
                 grid-row: 3/4;
                 grid-column: 2/3;
             }
+            @include respond(iphone){
+                width: 60%;
+                grid-row: 4/5;
+                grid-column: 1/2;
+            }
             
             .editor{
                 text-shadow: 0 0 5px white;
@@ -207,6 +236,11 @@
                 grid-column: 2/3;
                 border-right: 1px solid rgba(255, 255, 255, 0.308);
             }
+            @include respond(iphone){
+                width: 60%;
+                grid-row: 5/6;
+                grid-column: 1/2;
+            }
             
             .terminal{
                 text-shadow: 0 0 5px white;
@@ -222,7 +256,7 @@
 
     .post-script{
         position: absolute;
-        bottom: 5%;
+        bottom: 2%;
         left: 50%;
         transform: translate(-50%);
         font-size: 2rem;
