--- a/styles/main.css
+++ b/styles/main.css
@@ -26,25 +26,25 @@ html {
 
 @media (max-width: 800px) {
   html {
-    font-size: 50%;
+    font-size: 45%;
   }
 }
 
 @media (max-width: 550px) {
   html {
-    font-size: 48%;
+    font-size: 43%;
   }
 }
 
 @media (max-width: 430px) {
   html {
-    font-size: 45%;
+    font-size: 41%;
   }
 }
 
 @media (max-width: 380px) {
   html {
-    font-size: 40%;
+    font-size: 39%;
   }
 }
 
@@ -465,7 +465,7 @@ body .to-top:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.863)), color-stop(rgba(0, 44, 42, 0.836)), to(#000c33));
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.863), rgba(0, 44, 42, 0.836), #000c33);
   position: relative;
-  height: 213vh;
+  height: 240vh;
 }
 
 @media (max-width: 1024px) and (max-height: 600px) {
@@ -597,7 +597,7 @@ body .to-top:hover {
 @media (max-width: 800px) {
   #about .coding-skills {
     top: 45%;
-    height: 120vh;
+    height: 140vh;
     -ms-grid-columns: 50% 50%;
         grid-template-columns: 50% 50%;
     -ms-grid-rows: 10% 30% 60%;
@@ -607,12 +607,12 @@ body .to-top:hover {
 
 @media (max-width: 430px) {
   #about .coding-skills {
-    top: 40%;
-    height: 140vh;
+    top: 41%;
+    height: 72%;
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
-    -ms-grid-rows: 5% 20% 35% 25% 15%;
-        grid-template-rows: 5% 20% 35% 25% 15%;
+    -ms-grid-rows: 5% 18% 37% 25% 15%;
+        grid-template-rows: 5% 18% 37% 25% 15%;
   }
 }
 
